--- a/app/views/admin/topics/print_flashcards.html.erb
+++ b/app/views/admin/topics/print_flashcards.html.erb
@@ -1,4 +1,4 @@
-<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML'></script>
+<%= render 'mathjax' %>
 <div style="padding: 8px">
   <% @flashcards.each do |flashcard| %>
     <p><%= flashcard[3] %></p>
