--- a/app/views/notes/edit_content.html.erb
+++ b/app/views/notes/edit_content.html.erb
@@ -17,7 +17,7 @@
 <%= render partial: "tinymce_ext_scripts" %>
 <%= render partial: "tinymce_yt_async_plugin" %>
 <%= render partial: "tinymce_que_plugin" %>
-<%= render partial: "mathjax" %>
+<%= render "mathjax" %>
 <%= render partial: "tinymce_ncert_div_box" %>
 <script src="https://sdk.amazonaws.com/js/aws-sdk-2.533.0.min.js"></script>
 <script>
