--- a/app/views/questions/test_translation.html.erb
+++ b/app/views/questions/test_translation.html.erb
@@ -1,10 +1,4 @@
-<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML'></script>
-
-<script>
-  window.onload = function() {
-    MathJax.Hub.Queue(["Typeset", MathJax.Hub]);
-  };
-</script>
+<%= render 'mathjax' %>
 
 <div style="margin: 32px">
   <% @questions.each do |question| %>
