--- a/app/views/questions/add_hint.html.erb
+++ b/app/views/questions/add_hint.html.erb
@@ -1,4 +1,3 @@
-<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML'></script>
 <script src="https://sdk.amazonaws.com/js/aws-sdk-2.533.0.min.js"></script>
 <!-- CSS only -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -32,6 +31,7 @@
     100% { transform: rotate(360deg); }
   }
 </style>
+<%= render 'mathjax' %>
 
 <div style="padding: 8px">
   <p>Question <%= raw('<a href="https://admin1.neetprep.com/admin/questions/'+ @question.id.to_s + '/edit" target="_blank">(Edit Question)</a>') %></p>
@@ -113,13 +113,9 @@
 </div>
 
 <script>
- window.onload = function() {
-    MathJax.Hub.Queue(["Typeset", MathJax.Hub]);
-    reset();
-  };
-    $(function () {
-      $("select").select2();
-    });
+  $(function () {
+    $("select").select2();
+  });
   var loader = document.getElementById("loader");
   var audioButton = document.getElementById("audio_button");
   var uploadAudioButton = document.getElementById("upload_attach_button");
