--- a/app/views/application/_tinymce_youtube_plugin.html.erb
+++ b/app/views/application/_tinymce_youtube_plugin.html.erb
@@ -14,7 +14,8 @@ tinymce.PluginManager.add('youtubeIframe', function(editor) {
           {type: 'textbox', name: 'endtime', label: 'end time in seconds'}
         ],
         onsubmit: function(e) {
-          var youtubeVideoEmbedUrl = "https://www.youtube.com/embed/" + e.data.IframeURL.match(/(?:https?:\/{2})?(?:w{3}\.)?youtu(?:be)?\.(?:com|be)(?:\/watch\?v=|\/embed\/|\/)([^\s&]+)/)[1] + "?rel=0";
+          var videoId = e.data.IframeURL.match(/(?:https?:\/{2})?(?:w{3}\.)?youtu(?:be)?\.(?:com|be)(?:\/watch\?v=|\/embed\/|\/)([^\s&]+)/)[1];
+          var youtubeVideoEmbedUrl = "https://www.youtube.com/embed/" + videoId + "?rel=0&modestbranding=1&loop=1&playlist=" + videoId;
           if(e.data.startTime != null && e.data.startTime != '') {
             youtubeVideoEmbedUrl += '&start=' + e.data.startTime;
           }
