--- a/app/views/admin/questions/_tinymce.html.erb
+++ b/app/views/admin/questions/_tinymce.html.erb
@@ -22,7 +22,7 @@ tinymce.init({
       document.getElementById('question_question').value = editor.getContent();
     });
     // TODO: seems wiris plugin is changing this to not have its images affected but ends up causing issue to our image upload..so adding this..anything better?
-    editor.settings.images_dataimg_filter = function () {return undefined;};
+    editor.settings.images_dataimg_filter = function (img) {return true;};
   }
 });
 tinymce.init({
@@ -71,7 +71,7 @@ tinymce.init({
       document.getElementById('question_explanation').value = editor.getContent();
     });
     // TODO: seems wiris plugin is changing this to not have its images affected but ends up causing issue to our image upload..so adding this..anything better?
-    editor.settings.images_dataimg_filter = function () {return undefined;};
+    editor.settings.images_dataimg_filter = function () {return true;};
   }
 });
 </script>
