in place editing for sentence in video sentence

--- a/app/views/application/_tinymce_ext_scripts.html.erb
+++ b/app/views/application/_tinymce_ext_scripts.html.erb
@@ -5,4 +5,19 @@
   display: inline-block !important;
   width: auto !important;
 }
+.float-button{
+	position:fixed;
+	width: 280px;
+	height:45px;
+	top:150px;
+	right:40px;
+	background-color: red;
+	color:#FFF;
+	box-shadow: 2px 2px 3px #999;
+  z-index: 1000;
+  cursor: pointer;
+}
 </style>
+<div class="float-button" onclick="$('.wrs_tickContainer').hide();">
+  Hide MathType Trial Info* <br>*Click after opening MathType Editor
+</div>
