--- a/app/views/admin/questions/_cross_chapter.html.erb
+++ b/app/views/admin/questions/_cross_chapter.html.erb
@@ -7,8 +7,12 @@
         beforeSend: function (xhr,settings) {
             const crossChapterId = sessionStorage.getItem('cross_chapterId');
             const {url} = settings;
+
+            const findBySentenceUrl = url.startsWith('/admin/ncert_sentences') || 
+                url.startsWith('/admin/video_sentences');
+
             // intercept requests for finding ncert sentences if chapterId is given
-            if (!!crossChapterId && url.startsWith('/admin/ncert_sentences')) {
+            if (!!crossChapterId && findBySentenceUrl) {
                 const updatedUrl = new URL(window.location.host + url);
                 updatedUrl.searchParams.set('q[chapterId_eq]', crossChapterId);
 
