--- a/app/views/admin/questions/_cross_chapter.html.erb
+++ b/app/views/admin/questions/_cross_chapter.html.erb
@@ -13,7 +13,7 @@
 
             // intercept requests for finding ncert sentences if chapterId is given
             if (!!crossChapterId && findBySentenceUrl) {
-                const updatedUrl = new URL(window.location.host + url);
+                const updatedUrl = new URL(window.location.origin + url);
                 updatedUrl.searchParams.set('q[chapterId_eq]', crossChapterId);
 
                 // get relative url
