reused can_edit partial

--- a/app/views/admin/work_logs/_can_edit.html.erb
+++ b/app/views/admin/work_logs/_can_edit.html.erb
@@ -1,7 +1,7 @@
 <script>
 
-    const isSameAdminUser = <%= isSame %>;
+    const isSameAdminUser = <%= diableEdit %>;
     if (!isSameAdminUser) {
-        $('.action_items').hide();
+        $('<%= selecter %>').hide();
     }
 </script>
