fix: show create on new work-log

--- a/app/views/admin/work_logs/_can_edit.html.erb
+++ b/app/views/admin/work_logs/_can_edit.html.erb
@@ -1,7 +1,7 @@
 <script>
 
-    const isSameAdminUser = <%= diableEdit %>;
-    if (!isSameAdminUser) {
+    const disableEdit = <%= diableEdit %>;
+    if (disableEdit) {
         $('<%= selecter %>').hide();
     }
 </script>
