--- a/app/views/admin/tests/question_selection.erb
+++ b/app/views/admin/tests/question_selection.erb
@@ -32,7 +32,7 @@
 
     <div id="checkbox">
       <input id="video_audio_solution_question" type="checkbox" id="vehicle1" name="video-solution">
-      <label for="video-solution">Prefer video solutions and audio solutions for biology</label>
+      <label for="video-solution">Prefer audio & video solutions</label>
       <br>
       <input id="previous_year_question" type="checkbox" id="vehicle1" name="previous-year">
       <label for="previous-year"> Prefer previous year questions from AIPMT and NEET</label>
