--- a/app/views/admin/tests/question_selection.erb
+++ b/app/views/admin/tests/question_selection.erb
@@ -15,24 +15,31 @@
     overflow-y: auto;
     overflow-x: hidden;
   }
+  .submit {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+  }
   </style>
 </head>
 <body>
   <div style="margin: 32px">
-    <label for="question-count">Question Count :</label>
-    <input name="question-count" type="text" id="question_count" value="0" onkeyup="recalculateQuestionCount()">
-
-    <label>Chapter :</label>
+    <label for="question-count">Required Questions Count :</label>
+    <input name="question-count" type="integer" id="question_count" value="0" onkeyup="recalculateQuestionCount()">
+    <br><br>
+    <label>Chapter: </label>
 
     <select name="chapters" id="chapter_list">
       <option value='' selected>Select Chapter</option>
-      <% @chapters.each do |chapter|%>
-        <%= raw("<option value='#{chapter.id.to_s}'> #{chapter.name} </option>") %>
+      <% @chapters.each do |name, id|%>
+        <%= raw("<option value='#{id}'> #{name} </option>") %>
       <% end %>
     </select>
-
-    <label for="required-question-coun"> Required Questions :</label>
-    <span name="required-question-count" id="remaining_question_count"> </span>
 
     <br/><br/>
 
@@ -49,9 +56,9 @@
       <label for="previous-year"> Prefer previous year questions from AIPMT and NEET</label>
     </div>
 
+  <button id="get_question" class="submit">Get Questions</button>
   </div>
 
-  <button id="get_question">Get Questions</button>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.full.min.js"></script>
 
   <script type="text/javascript">
